[tool.poetry]
name = "pyhousehunter"
version = "0.1.0"
description = "Python package for searching for rentals on Craigslist."
authors = ["Ela Bandari <elabandari@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
pandas = "^1.2.3"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
